--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic/angular": "^4.7.1",
     "cordova-ios": "^5.1.1",
     "core-js": "^2.5.4",
+    "moment": "^2.24.0",
     "mongoose": "^5.8.9",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
