--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "@ngrx/store-devtools": "^8.6.0",
     "cordova-ios": "^5.1.1",
     "core-js": "^2.5.4",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "mongoose": "^5.8.9",
+    "ng-circle-progress": "^1.5.1",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
@@ -47,6 +49,7 @@
     "@ngrx/schematics": "^8.6.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/lodash": "^4.14.149",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "cordova-plugin-device": "^2.0.2",
